the possible loss of changes if the user clicked 'Edit' again. [Noam Weinstein]

=item *

Bug fix for templates that had wide UTF-8 characters. [Michael Peters]

=item *

Added rollover-preview to the find_media_link screen. [Michael Peters]

=item *

Collapsed many similar buttons into "dropdown" style buttons to make
the UI cleaner. [Michael Peters]

=back


=head2 3.04 - December 12, 2008

=over

=item *

Fixed Bug in RadioGroup labels (was calling localize() on the 
labels-hashref key instead of its value to populate the label) 
[David Kaufman]

=item *

Fixed broken JS for ListGroup management in Edit Story UI. 
[Noam Weinstein]

=item *

Fixed Safari errors in Xinha-based bulk-editing

=item *

Fixed bug in FTP code where timezone used by FTP server (for 
file creation dates, logging, etc.) was always UTC regardless of 
the local machine's timezone (causing inconsistency in Krang dates 
and log entries). [Noam Weinstein]

=item *

Fix to unpreview a media object when it is deleted (instead of just 
unpublishing it). [David Kaufman]

=item *

Refactored bulk edit in its own classes.  The legacy textarea-based
bulk editing is in L<Krang::BulkEdit::Textarea>.  Xinha-based bulk
editing is provided by L<Krang::BulkEdit::Xinha>. This module largely
uses parsing instead of regexes to sanitize/scrub the HTML coming from
Xinha. Xinha's toolbar and the set of allowed block-level tags are
configurable via subclassing L<Krang::BulkEdit::Xinha::Config>.  This
module also permits configuration of whether paragraphs should be split 
on BR tags. [Bodo Schulze]

=item *

Pass the browser engine name to the environment via
KRANG_BROWSER_ENGINE. This enables clients to dispatch to
Krang::Markup::SomeBrowserEngine methods. [Bodo Schulze]

=item *

Added modules to filter incoming/outgoing HTML markup according to
what different browser engines' markup commands can handle in WYSIWYG
areas.  The base class L<Krang::Markup> is subclassed by